# irc-server

./: CMakeLists.txt  main.cpp  server.cpp  server.hpp
base/: CMakeLists.txt  error.cpp  error.hpp  fd_stream_buffer.cpp  fd_stream_buffer.hpp
irc/: CMakeLists.txt  irc_controller.cpp  irc_controller.hpp
network/: CMakeLists.txt  poll_array.cpp  poll_array.hpp  server_poll_socket.cpp  server_poll_socket.hpp  server_poll_socket_delegate.hpp
